[tool.poetry]
name = "langchain-hana-prototype"
version = "0.1.0"
description = ""
authors = ["yberber-sap <yusuf.berber@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-core = "^0.3.21"
hdbcli = "^2.22.32"
numpy = ">1.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-socket = "^0.7.0"
pytest-asyncio = "^0.24.0"
langchain-tests = "0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
